--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3236,11 +3236,11 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #134f2c;
+			background-color: #261c3e;
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #134f2c;
 		}
 
 		.wrapper.style1-alt {
