--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3240,7 +3240,8 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #134f2c;
+			background-color: #5e42a6;
+			/* background-image:url(../../images/undraw_Coding_re_iv62.png); */
 		}
 
 		.wrapper.style1-alt {
