--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3241,7 +3241,7 @@ input, select, textarea {
 
 		.wrapper.style1 {
 			background-color: #5e42a6;
-			/* background-image:url(../../images/undraw_Coding_re_iv62.png); */
+			/* background-image:url(../../../images/Hikotomo!.PNG); */
 		}
 
 		.wrapper.style1-alt {
