--- a/javasqript_practice/0_droid/droid.css
+++ b/javasqript_practice/0_droid/droid.css
@@ -1,14 +1,14 @@
 body{
     margin: 0;
-    background: url("../../0708_プログラミング入門_HTML/programming_src/bg.png") repeat;
+    background: url("images/bg.png") repeat;
     font-size: 14px;
     text-align: center;
 }
 
 h1 {
-    background: url("../../0708_プログラミング入門_HTML/programming_src/title_bg.gif") repeat;
+    background: url("images/title_bg.gif") repeat;
     font-size: 20px;
-    color: white;x
+    color: white;
     margin: 0;
     padding: 20px;
 }
