--- a/javascript_practice/94_mini_blog.css
+++ b/javascript_practice/94_mini_blog.css
@@ -7,3 +7,13 @@
   color: black;
   text-decoration: none;
   }
+
+.delete_button{
+  display: inline-block;
+  background: #E06766;
+  margin: 10px 10px;
+  padding: 2px 15px;
+  border-radius: 4px;
+  color: black;
+  text-decoration: none;
+  }
