--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -4,6 +4,21 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+
+body{
+	margin: 40px;
+	text-align: center;
+}
+
+.main{
+	display: flex;
+ }
+
+.contentA,.contentB{
+	width: 50%;
+	height: 200px;
+}
+
 /* Spotlights */
 
 	.spotlights > section > .image:before {
