--- a/javascript_practice/94_mini_blog.css
+++ b/javascript_practice/94_mini_blog.css
@@ -11,9 +11,35 @@
 .delete_button{
   display: inline-block;
   background: #E06766;
-  margin: 10px 10px;
+  margin: 3px 10px;
   padding: 2px 15px;
   border-radius: 4px;
   color: black;
   text-decoration: none;
+  }
+
+h8{
+  opacity: 0.4;
+  text-align:right;
+}
+
+
+body{
+  margin:0px 25px;
+  padding:0px;
+  }
+
+  #layout{
+    margin-left:auto;
+    margin-right:auto;
+    width:780px;
+    }
+
+  .bg-img{
+    background-image: url("94_ゆるゆるくらげ.png");
+    background-size: 200px;
+    /* background-repeat: no-repeat; */
+    background-color:rgba(255,255,255,0.95);
+    background-blend-mode:lighten;
+    /* background-size: cover; */
   }
