--- a/javascript_practice/94_mini_blog.css
+++ b/javascript_practice/94_mini_blog.css
@@ -1,22 +1,11 @@
-.button{
+/* .button{
   display: inline-block;
-  background: #A5CA95;
-  /* margin: 0 10px; */
+  background: grey;
   padding: 10px 15px;
   border-radius: 4px;
   color: black;
   text-decoration: none;
-  }
-
-.delete_button{
-  display: inline-block;
-  background: #E06766;
-  margin: 3px 10px;
-  padding: 2px 15px;
-  border-radius: 4px;
-  color: black;
-  text-decoration: none;
-  }
+  } */
 
 h8{
   opacity: 0.4;
