--- a/javascript_practice/94_mini_blog.css
+++ b/javascript_practice/94_mini_blog.css
@@ -15,7 +15,7 @@ body{
     }
 
   .bg-img{
-    background-image: url("94_ゆるゆるくらげ.png");
+    background-image: url("94_yuruyurukurage.png");
     background-size: 200px;
     background-color:rgba(255,255,255,0.95);
     background-blend-mode:lighten;
