--- a/javascript_practice/94_mini_blog.css
+++ b/javascript_practice/94_mini_blog.css
@@ -20,3 +20,13 @@ body{
     background-color:rgba(255,255,255,0.95);
     background-blend-mode:lighten;
   }
+
+@import url(https://fonts.googleapis.com/css?family=Amatic+SC);
+
+h1 {
+  font-family: -apple-system, "Segoe UI", "Helvetica Neue", "Hiragino Kaku Gothic ProN", メイリオ, meiryo, sans-serif;
+  font-size: 40px;
+  background: url(http://webcreatorbox.com/sample/images/check.png) repeat-x 0 25px;
+  display: inline-block;
+  padding: 0 10px
+}
